--- a/pedido.html
+++ b/pedido.html
@@ -41,7 +41,7 @@
                         <img src="assets/images/d743f2742a5199d27fd203defdbdf7ba-128x128.png" alt="Mobirise" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary text-primary display-5" href="home.html#top">RESTO<br>DELIVERY</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary text-primary display-5" href="index.html#top">RESTO<br>DELIVERY</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -151,7 +151,7 @@
             <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2">Seleccioná tu ubicación</h3>
             
         </div>
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCZI5F_k6S1k46ujh0SNrapM89f7mJxd30&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
+        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCNveGQ9bfpKFwWzQLLftrR9hNiHwdqQG8&amp;q=350 5th Ave, New York, NY 10118" allowfullscreen=""></iframe></div>
     </div>
 </section>
 
@@ -165,7 +165,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="HJgfbuwZmL45oLiiRoug/XBUTXEDFKMfo+3HKkfiFD0juIeJ9b+1ufIa5KZKVXUbesMQdiJEb+DyHJhKcCikgABi2sZCFZXd0XAjai89DUh6wpLZAMp257J7tMUcl/cn">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KVzPyahGSCRHr5l7rtr3pRkArXi6eoqqkZFEVQ7IriM4ZZGkYlvLeekYdDm7F1iodwes8loi5sV5h+p4LWQ3P6D3z4g4Wqdesrdzu2wh8TPlzaJMR59QdZ9gDVp4RGab">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">¡Muchas gracias!
 Tu pedido ya está en camino.</div>
@@ -237,7 +237,7 @@ Tu pedido ya está en camino.</div>
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web software - <a href="https://mobirise.site/p" style="color:#aaa;">Click for more</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">web</a> theme</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
