--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-4">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="home.html"><font face="Moririse2"><br></font>Volver al inicio</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="index.html"><font face="Moririse2"><br></font>Volver al inicio</a></div>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="KtTen6kSAVM1vYbSQHdrj6qgCssP/YFEjggkFgMZvUnnVL4eSMnSR2OA1blocF/4lTZdz1pMo0CXBmyoPqsczw+G+A2yBaX60zMTzVOa4ZYHv0CxCtu8cFbCgjesQEUL">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aRRz3RnoqofkMYBb7HD/sOYyiqWoE9Zk0QQnoiS/yNJNrRx3nzaN1Esh15OsUQ73fp+5Wah/HnyqwE1UPs058wrT8hWODYd4LvWSm87xApNVTC01FMAAAE8FzbSqX07B">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">¿No tenés cuenta? <a href="registrarse.html" class="text-primary"><strong>Create una.</strong></a></p>
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ingresaste correctamente.
@@ -64,7 +64,7 @@ Ya podés volver al inicio.</div>
                             <input type="text" name="name" placeholder="Usuario" data-form-field="name" class="form-control" value="" id="name-form7-l">
                         </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="Contraseña" data-form-field="email" class="form-control" value="" id="email-form7-l">
+                            <input type="password" name="email" placeholder="Contraseña" data-form-field="email" class="form-control" value="" id="email-form7-l">
                         </div>
                         
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-black display-4">Ingresar</button></div>
@@ -103,7 +103,7 @@ Ya podés volver al inicio.</div>
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/g" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This web page</a> was made with Mobirise themes</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free creator - <a href="https://mobirise.site/n" style="color:#aaa;">Visit site</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
