--- a/registrarse.html
+++ b/registrarse.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-4">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="home.html"><font face="Moririse2"><br></font>Volver al inicio</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white display-4" href="index.html"><font face="Moririse2"><br></font>Volver al inicio</a></div>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BSfOccDWqfkoaudJAV/0tKpJuxrU4wu5QPeK7esmcfZjswavgKJPV5seo+1eEYIIk9YXCtowym2Tr48Oax+KA+tg7jOfoglXAr7fV9ePMTdn2zSSf1TcQa5EDVAkjawb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aahpMQkymO7Z4zc3yfJWycM89IjtQj/odHXm5pLPQC8tjz0MOi8nYPoj83znBjCikL0v9cGddvDACfMhe9PgG16ugnytgjszJjyU3ZSoqOnuJ4TJN8N8qi686+o6f38H">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">¿Ya tenés cuenta? <a href="login.html" class="text-primary"><strong>Iniciá sesión.</strong></a></p>
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Te enviamos un correo de confirmación. Si no lo ves, buscalo en tu correo spam.</div>
@@ -65,7 +65,10 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
                             <input type="email" name="email" placeholder="Correo" data-form-field="email" class="form-control" value="" id="email-form7-u">
                         </div>
-                        <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
+                        <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
+                            <input type="tel" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
+                        </div>
+                        <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
                             <input type="tel" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
                         </div>
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-black display-4">Ingresar</button></div>
@@ -104,7 +107,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/v" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/a" style="color:#aaa;">Mobirise</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/u" style="color:#aaa;">site</a> templates</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/sociallikes/social-likes.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
