--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="dragArea row">
                             <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="name">
-                                <input type="text" name="name" placeholder="Usuario" data-form-field="name"
+                                <input type="email" name="name" placeholder="Correo Electrónico" data-form-field="name"
                                     class="form-control" value="" id="name-form7-l">
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
