--- a/registrarse.html
+++ b/registrarse.html
@@ -67,17 +67,14 @@
                             problem!</div>
                     </div>
                     <div class="dragArea row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="name">
-                            <input type="text" name="name" placeholder="Usuario" data-form-field="name" class="form-control" value="" id="name-form7-u">
-                        </div>
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="Correo" data-form-field="email" class="form-control" value="" id="email-form7-u">
+                            <input type="email" name="email" placeholder="Correo Electrónico" data-form-field="email" class="form-control" value="" id="email-form7-u">
                         </div>
                         <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
                             <input type="tel" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
                         </div>
                         <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
-                            <input type="tel" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
+                            <input type="tel" name="phone" placeholder="Repetí tu contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
                         </div>
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-black display-4">Ingresar</button></div>
                     </div>
