--- a/registrarse.html
+++ b/registrarse.html
@@ -71,10 +71,10 @@
                             <input type="email" name="email" placeholder="Correo Electrónico" data-form-field="email" class="form-control" value="" id="email-form7-u">
                         </div>
                         <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
-                            <input type="tel" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
+                            <input type="password" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
                         </div>
                         <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
-                            <input type="tel" name="phone" placeholder="Repetí tu contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
+                            <input type="password" name="phone" placeholder="Repetí tu contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
                         </div>
                         <div class="col-auto mbr-section-btn align-center"><button type="submit" class="btn btn-black display-4">Ingresar</button></div>
                     </div>
