--- a/login.html
+++ b/login.html
@@ -83,10 +83,9 @@
                                 some
                                 problem!</div>
                         </div>
-                        <div class="dragArea row">
-                            <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="name">
-                                <input type="email" name="name" placeholder="Correo Electrónico" data-form-field="name"
-                                    class="form-control" value="" id="name-form7-l">
+                        <div class="dragArea row">                            
+                            <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
+                                <input type="email" name="email" placeholder="Correo electrónico" data-form-field="email" class="form-control" value="" id="email-form7-l">
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
                                 <input type="password" name="email" placeholder="Contraseña" data-form-field="email"
