--- a/registrarse.html
+++ b/registrarse.html
@@ -68,7 +68,7 @@
                     </div>
                     <div class="dragArea row">
                         <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
-                            <input type="email" name="email" placeholder="Correo Electrónico" data-form-field="email" class="form-control" value="" id="email-form7-u">
+                            <input type="email" name="email" placeholder="Correo electrónico" data-form-field="email" class="form-control" value="" id="email-form7-u">
                         </div>
                         <div data-for="password" class="col-lg-12 col-md-12 col-sm-12 form-group mb-3">
                             <input type="password" name="phone" placeholder="Contraseña" data-form-field="phone" class="form-control" value="" id="phone-form7-u">
