--- a/login.html
+++ b/login.html
@@ -88,8 +88,8 @@
                                 <input type="email" name="email" placeholder="Correo electrónico" data-form-field="email" class="form-control" value="" id="email-form7-l">
                             </div>
                             <div class="col-lg-12 col-md-12 col-sm-12 form-group mb-3" data-for="email">
-                                <input type="password" name="email" placeholder="Contraseña" data-form-field="email"
-                                    class="form-control" value="" id="email-form7-l">
+                                <input type="password" name="email" placeholder="Contraseña" data-form-field="name"
+                                    class="form-control" value="" id="name-form7-l">
                             </div>
 
                             <div class="col-auto mbr-section-btn align-center"><button type="submit"
