--- a/promos.html
+++ b/promos.html
@@ -26,7 +26,7 @@
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8T8604Q7XM"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
@@ -80,8 +80,8 @@
             <div class="col-12 col-lg-5">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">LA PROMO DEL DÍA</h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-2">50% DE DESCUENTO</h2>
-                <p class="mbr-text mbr-fonts-style display-7">¡Aprovechá este ofertón y pedí un Combo Hamburguesa Especial + Papas a la mitad de precio!</p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="pedido.html">ARS 259 (Antes ARS 459)&nbsp;</a></div>
+                <p class="mbr-text mbr-fonts-style display-7"><strong><em>ARS 259 (Antes ARS 459)</em></strong><br>¡Aprovechá este ofertón y pedí un Combo Hamburguesa Especial + Papas a la mitad de precio!</p>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="pedido.html"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>COMPRAR&nbsp;&nbsp;</a></div>
             </div>
         </div>
     </div>
@@ -113,7 +113,7 @@
                                 </div>
                                 <div class="col-md-auto">
                                     <p class="price mbr-fonts-style display-2">-10%</p>
-                                    <div class="mbr-section-btn"><a href="pedido.html" class="btn btn-primary display-4">ARS 134</a></div>
+                                    <div class="mbr-section-btn"><a href="pedido.html" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ARS 134</a></div>
                                 </div>
                                 <div></div>
                             </div>
@@ -142,7 +142,7 @@
                                 </div>
                                 <div class="col-md-auto">
                                     <p class="price mbr-fonts-style display-2">-20%</p>
-                                    <div class="mbr-section-btn"><a href="pedido.html" class="btn btn-primary display-4">ARS 159</a></div>
+                                    <div class="mbr-section-btn"><a href="pedido.html" class="btn btn-primary display-4"><span class="mobi-mbri mobi-mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>ARS 159</a></div>
                                 </div>
                                 <div></div>
                             </div>
@@ -206,7 +206,7 @@
             
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/s" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Site was <a href="https://mobirise.site/g" style="color:#aaa;">made</a> with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/k" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;">Designed</a> with Mobirise html site themes</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
