--- a/index.html
+++ b/index.html
@@ -47,6 +47,18 @@
           a.appendChild(r);
       })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
+
+
+  <!-- Mouseflow Tracking Script -->
+  <script type="text/javascript">
+        window._mfq = window._mfq || [];
+        (function() {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript"; mf.defer = true;
+        mf.src = "//cdn.mouseflow.com/projects/b9d9b35d-2313-45e6-b77a-1c058c666b61.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+        })();
+  </script>
   
   
 </head>
